--- a/function_demo.ipynb
+++ b/function_demo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -17,11 +17,8 @@
      "output_type": "stream",
      "text": [
       "ERROR -1 2104 Market data farm connection is OK:usfarm.nj\n",
-      "ERROR -1 2104 Market data farm connection is OK:usfuture\n",
       "ERROR -1 2104 Market data farm connection is OK:cashfarm\n",
       "ERROR -1 2104 Market data farm connection is OK:usfarm\n",
-      "ERROR -1 2106 HMDS data farm connection is OK:ushmds.nj\n",
-      "ERROR -1 2106 HMDS data farm connection is OK:cashhmds\n",
       "ERROR -1 2106 HMDS data farm connection is OK:ushmds\n",
       "ERROR -1 2158 Sec-def data farm connection is OK:secdefnj\n"
      ]
@@ -31,32 +28,7 @@
      "output_type": "stream",
      "text": [
       "waiting for connection\n",
-      "The next valid order id is:  7\n",
-      "connected\n",
-      "\n",
-      "openOrder id: 7 AAPL STK @ SMART : SELL LMT 2.0 Submitted\n",
-      "orderStatus - orderid: 7 status: Submitted filled 0.0 remaining 2.0 lastFillPrice 0.0\n",
-      "openOrder id: 7 AAPL STK @ SMART : SELL LMT 2.0 Submitted\n",
-      "orderStatus - orderid: 7 status: Submitted filled 0.0 remaining 2.0 lastFillPrice 0.0\n",
-      "Order Executed:  -1 AAPL STK USD 0000db5b.64c1154d.01.01 7 2.0 2\n",
-      "openOrder id: 7 AAPL STK @ SMART : SELL LMT 2.0 Filled\n",
-      "orderStatus - orderid: 7 status: Filled filled 2.0 remaining 0.0 lastFillPrice 194.26\n",
-      "openOrder id: 7 AAPL STK @ SMART : SELL LMT 2.0 Filled\n",
-      "orderStatus - orderid: 7 status: Filled filled 2.0 remaining 0.0 lastFillPrice 194.26\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 7 10148 OrderId 7 that needs to be cancelled cannot be cancelled, state: Filled.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cancelling order\n"
+      "The next valid order id is:  8\n"
      ]
     }
    ],
@@ -152,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1720,6 +1692,152 @@
     "app = TestApp()\n",
     "app.connect(\"127.0.0.1\", 7496, 1000)\n",
     "app.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download Historical Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ibapi.client import EClient\n",
+    "from ibapi.wrapper import EWrapper\n",
+    "from ibapi.contract import Contract\n",
+    "\n",
+    "import threading\n",
+    "import time\n",
+    "from datetime import datetime\n",
+    "import numpy as np\n",
+    "\n",
+    "def download_data_from_ib(stock, start_date=\"01-01-2021\", end_date = datetime.now(), size ='1 day'):\n",
+    "\n",
+    "\tclass IBapi(EWrapper, EClient):\n",
+    "\t\tdef __init__(self):\n",
+    "\t\t\tEClient.__init__(self, self)\n",
+    "\t\t\tself.data = [] #Initialize variable to store candle\n",
+    "\n",
+    "\t\tdef historicalData(self, reqId, bar):\n",
+    "\t\t\t# print(f'Time: {bar.date} Close: {bar.close}')\n",
+    "\t\t\tself.data.append([bar.date, bar.close])\n",
+    "\t\t\t\n",
+    "\tdef run_loop():\n",
+    "\t\tapp.run()\n",
+    "\n",
+    "\tapp = IBapi()\n",
+    "\tapp.connect('127.0.0.1', 7496, 123)\n",
+    "\n",
+    "\t#Start the socket in a thread\n",
+    "\tapi_thread = threading.Thread(target=run_loop, daemon=True)\n",
+    "\tapi_thread.start()\n",
+    "\n",
+    "\ttime.sleep(1) #Sleep interval to allow time for connection to server\n",
+    "\n",
+    "\t#Create contract object\n",
+    "\teurusd_contract = Contract()\n",
+    "\teurusd_contract.symbol = stock\n",
+    "\teurusd_contract.secType = 'STK'\n",
+    "\teurusd_contract.exchange = 'SMART'\n",
+    "\teurusd_contract.currency = 'USD'\n",
+    "\n",
+    "\tstart_date = datetime.strptime(start_date, '%m-%d-%Y')\n",
+    "\tend_date = datetime.now()\n",
+    "\n",
+    "\tdays = (end_date - start_date).days\n",
+    "\tif days < 365:\n",
+    "\t\tduration = \"%d D\" % days\n",
+    "\telse:\n",
+    "\t\tduration = \"%d Y\" % np.ceil(days / 365)\n",
+    "\t# when getting daily data, look at regular trading hours only\n",
+    "\t# to get accurate daily closing prices\n",
+    "\tuseRTH = True\n",
+    "\t# round up current time to midnight for even days\n",
+    "\tend_date = end_date.replace(\n",
+    "\t\thour=0, minute=0, second=0, microsecond=0\n",
+    "\t)\n",
+    "\n",
+    "\n",
+    "\tend_date = end_date.strftime(f\"%Y%m%d %H:%M:%S UTC\")\n",
+    "\t# duration = '2 D'\n",
+    "\t#Request historical candles\n",
+    "\n",
+    "\tprint(\"start_date\",start_date)\n",
+    "\tprint(\"end_date\", end_date)\n",
+    "\tprint(\"duration\", duration)\n",
+    "\tapp.reqHistoricalData(1, eurusd_contract, end_date, duration, size, 'BID', useRTH, 1, False, [])\n",
+    "\n",
+    "\ttime.sleep(5) #sleep to allow enough time for data to be returned\n",
+    "\n",
+    "\t# #Working with Pandas DataFrames\n",
+    "\timport pandas\n",
+    "\n",
+    "\tdf = pandas.DataFrame(app.data, columns=['DateTime', 'Close'])\n",
+    "\t# print(df)\n",
+    "\tdf['DateTime'] = pandas.to_datetime(df['DateTime'],\n",
+    "               format='%Y%m%d') \n",
+    "\tdf.to_csv('data/' + stock + '.csv')  \n",
+    "\n",
+    "\n",
+    "\n",
+    "\tapp.disconnect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR -1 2104 Market data farm connection is OK:usfarm.nj\n",
+      "ERROR -1 2104 Market data farm connection is OK:cashfarm\n",
+      "ERROR -1 2104 Market data farm connection is OK:usfarm\n",
+      "ERROR -1 2106 HMDS data farm connection is OK:ushmds\n",
+      "ERROR -1 2158 Sec-def data farm connection is OK:secdefnj\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start_date 2021-01-01 00:00:00\n",
+      "end_date 20230807 00:00:00 UTC\n",
+      "duration 3 Y\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR -1 2104 Market data farm connection is OK:usfarm.nj\n",
+      "ERROR -1 2104 Market data farm connection is OK:cashfarm\n",
+      "ERROR -1 2104 Market data farm connection is OK:usfarm\n",
+      "ERROR -1 2106 HMDS data farm connection is OK:ushmds\n",
+      "ERROR -1 2158 Sec-def data farm connection is OK:secdefnj\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start_date 2021-01-01 00:00:00\n",
+      "end_date 20230807 00:00:00 UTC\n",
+      "duration 3 Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "stocks = [\"AAPL\", \"TSLA\"]\n",
+    "for stock in stocks:\n",
+    "    download_data_from_ib(stock)\n"
    ]
   },
   {
